--- a/app/views/holidays/_form.html.erb
+++ b/app/views/holidays/_form.html.erb
@@ -29,7 +29,7 @@
 
     <div>
       <%= f.label :date, "Ngày", class: "block text-sm font-medium text-gray-700 mb-1" %>
-      <%= f.date_field :date, class: "w-full border border-gray-300 rounded-lg px-4 py-2 focus:ring-2 focus:ring-brand-blue outline-none", required: true %>
+      <%= f.text_field :date, class: "w-full border border-gray-300 rounded-lg px-4 py-2 focus:ring-2 focus:ring-brand-blue outline-none", required: true, data: { controller: "datepicker" } %>
     </div>
 
     <div>
