feat(web-push): add notification click redirect with highlight + fix worker network
- Add action_url method to Notification model with highlight param
- Update WebPushService URL to include highlight for contact
- Create highlight_controller.js for scroll and flash animation
- Add contact IDs to table rows for highlighting
- Fix worker network to allow external API calls (FCM)

--- a/app/views/sales_workspace/_contact_list.html.erb
+++ b/app/views/sales_workspace/_contact_list.html.erb
@@ -14,7 +14,7 @@
     </thead>
     <tbody id="new_contacts_table_body" class="bg-white divide-y divide-gray-100">
       <% contacts.each do |contact| %>
-        <tr class="hover:bg-blue-50/50 transition-all duration-200 group relative">
+        <tr id="contact_<%= contact.id %>" class="hover:bg-blue-50/50 transition-all duration-200 group relative">
           <!-- Customer Info -->
           <td class="pl-6 pr-3 py-4 whitespace-nowrap cursor-pointer"
               data-action="click->workspace-tabs#showPreview"
