--- a/app/views/sales_workspace/show.html.erb
+++ b/app/views/sales_workspace/show.html.erb
@@ -2,7 +2,7 @@
 <%= turbo_stream_from "user_#{current_user.id}_contacts" %>
 
 <div class="min-h-screen bg-gray-50" 
-     data-controller="workspace-tabs"
+     data-controller="workspace-tabs highlight"
      data-workspace-tabs-slide-over-outlet="#main-slide-over">
   <!-- Header -->
   <div class="bg-white border-b border-gray-200 px-6 py-4 mb-6">
