--- a/app/views/sales_workspace/show.html.erb
+++ b/app/views/sales_workspace/show.html.erb
@@ -17,7 +17,7 @@
       <div class="flex items-center space-x-4">
           <div class="flex items-center space-x-6">
             <div class="flex items-center space-x-2 text-sm">
-              <span class="inline-flex items-center justify-center w-8 h-8 rounded-full bg-blue-100 text-brand-blue font-bold"><%= @kpis[:new_contacts] %></span>
+              <span id="kpi_new_contacts" class="inline-flex items-center justify-center w-8 h-8 rounded-full bg-blue-100 text-brand-blue font-bold"><%= @kpis[:new_contacts] %></span>
               <span class="text-gray-600">Khách mới</span>
             </div>
             <% if false # TODO: Uncomment when re-enabling "Cần cập nhật" feature %>
