--- a/app/views/shared/_sidebar.html.erb
+++ b/app/views/shared/_sidebar.html.erb
@@ -34,6 +34,9 @@
     <%# Tổ chức section %>
     <%= sidebar_section "Tổ chức", ["teams.view", "roles.view", "employees.view", "holidays.manage", "saturday_schedules.manage"] %>
     <%= sidebar_link "Đội nhóm", teams_path, "fa-user-group", permission: "teams.view" %>
+    <% if current_user.team_leader? %>
+      <%= sidebar_link "Yêu cầu chờ duyệt", teams_reassign_requests_path, "fa-user-clock", permission: nil %>
+    <% end %>
     <%= sidebar_link "Phân quyền", roles_path, "fa-user-shield", permission: "roles.view" %>
     <%= sidebar_link "Nhân viên", users_path, "fa-id-card", permission: "employees.view" %>
     <%= sidebar_link "Lịch nghỉ lễ", holidays_path, "fa-calendar-days", permission: "holidays.manage" %>
